@@ -7,66 +7,58 @@ import com.example.demo.repository.AssetLifecycleEventRepository;
 import com.example.demo.repository.AssetRepository;
 import com.example.demo.service.AssetLifecycleEventService;
 import org.springframework.stereotype.Service;
+
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 
 @Service
 public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventService {
+
     private final AssetLifecycleEventRepository eventRepository;
     private final AssetRepository assetRepository;
 
-    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository, AssetRepository assetRepository) {
+    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository,
+                                          AssetRepository assetRepository) {
         this.eventRepository = eventRepository;
         this.assetRepository = assetRepository;
     }
 
     @Override
     public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
+
         Asset asset = assetRepository.findById(assetId)
                 .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
 
-        if (event.getEventType() == null || event.getEventType().trim().isEmpty()) {
+        if (event.getEventType() == null || event.getEventType().isBlank()) {
             throw new IllegalArgumentException("Event type is required");
         }
 
-        if (event.getEventDescription() == null || event.getEventDescription().trim().isEmpty()) {
+        if (event.getEventDescription() == null || event.getEventDescription().isBlank()) {
             throw new IllegalArgumentException("Event description must not be blank");
         }
 
-        if (event.getEventDate() != null && event.getEventDate().isAfter(LocalDate.now())) {
+        if (event.getEventDate() == null) {
+            throw new IllegalArgumentException("Event date is required");
+        }
+
+        if (event.getEventDate().isAfter(LocalDate.now())) {
             throw new IllegalArgumentException("Event date must not be in the future");
         }
 
         event.setAsset(asset);
         event.setLoggedAt(LocalDateTime.now());
+
         return eventRepository.save(event);
     }
 
     @Override
-public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
+    public List<AssetLifecycleEvent> getEventsForAsset(Long assetId) {
 
-    Asset asset = assetRepository.findById(assetId)
-            .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+        if (!assetRepository.existsById(assetId)) {
+            throw new ResourceNotFoundException("Asset not found");
+        }
 
-    if (event.getEventType() == null || event.getEventType().isBlank()) {
-        throw new IllegalArgumentException("Event type is required");
+        return eventRepository.findByAssetIdOrderByEventDateDesc(assetId);
     }
-
-    if (event.getEventDescription() == null || event.getEventDescription().isBlank()) {
-        throw new IllegalArgumentException("Event description must not be blank");
-    }
-
-    if (event.getEventDate() == null) {
-        throw new IllegalArgumentException("Event date is required");
-    }
-
-    if (event.getEventDate().isAfter(java.time.LocalDate.now())) {
-        throw new IllegalArgumentException("Event date must not be in the future");
-    }
-
-    event.setAsset(asset);
-    event.setLoggedAt(java.time.LocalDateTime.now());
-
-    return eventRepository.save(event);
 }
